@@ -1,6 +1,6 @@
 % File src/library/base/man/which.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2010 R Core Team
+% Copyright 1995-2013 R Core Team
 % Distributed under GPL 2 or later
 
 \name{which}
@@ -24,8 +24,11 @@ arrayInd(ind, .dim, .dimnames = NULL, useNames = FALSE)
  \item{ind}{integer-valued index vector, as resulting from
    \code{which(x)}.}
  \item{.dim}{\code{\link{dim}(.)} integer vector}
- \item{.dimnames}{optional list of character \code{\link{dimnames}(.)},
-   of which only \code{.dimnames[[1]]} is used.}
+ \item{.dimnames}{optional list of character \code{\link{dimnames}(.)}.
+   If \code{useNames} is true, to be used for constructing dimnames for
+   \code{arrayInd()} (and hence, \code{which(*, arr.ind=TRUE)}).
+   If \code{\link{names}(.dimnames)} is not empty, these are used as
+   column names.  \code{.dimnames[[1]]} is used as row names.}
  \item{useNames}{logical indicating if the value of \code{arrayInd()}
    should have (non-null) dimnames at all.}
 }
@@ -56,18 +59,33 @@ which((1:12)\%\%2 == 0) # which are even?
 which(1:10 > 3, arr.ind = TRUE)
 
 ( m <- matrix(1:12, 3, 4) )
-which(m \%\% 3 == 0)
-which(m \%\% 3 == 0, arr.ind = TRUE)
+div.3 <- m \%\% 3 == 0
+which(div.3)
+which(div.3, arr.ind = TRUE)
 rownames(m) <- paste("Case", 1:3, sep = "_")
 which(m \%\% 5 == 0, arr.ind = TRUE)
 
 dim(m) <- c(2, 2, 3); m
-which(m \%\% 3 == 0, arr.ind = FALSE)
-which(m \%\% 3 == 0, arr.ind = TRUE)
+which(div.3, arr.ind = FALSE)
+which(div.3, arr.ind = TRUE)
 
 vm <- c(m)
 dim(vm) <- length(vm) #-- funny thing with  length(dim(...)) == 1
-which(vm \%\% 3 == 0, arr.ind = TRUE)
+which(div.3, arr.ind = TRUE)
+\dontshow{
+dimnames(m) <- list(X = c("U", "V"), Z = c("y","z"), three = LETTERS[1:3])
+wm <- which(m \%\% 3 == 0, arr.ind = TRUE)
+vn <- vm; dimnames(vn) <- list(LETTERS[1:12])
+wv <- which(vn \%\% 3 == 0, arr.ind = TRUE)
+
+stopifnot(identical(wv, array(3L*(1:4), dim = c(4, 1),
+                              dimnames = list(c("C", "F", "I", "L"), "dim1"))),
+          identical(wm, array(c(1:2, 1:2, 2:1, 1:2, 1:3, 3L),
+                              dim = 4:3,
+                              dimnames = list(rep(c("U","V"),2),
+                                              c("X", "Z", "three"))))
+)
+}%dont
 }
 \keyword{logic}
 \keyword{attribute}
