@@ -31,6 +31,10 @@
       \item New \code{anyMissing()} is a fast version of \code{any(is.na(.))},
       based on a proposal by Tim Hesterberg. (Wish of \PR{15239}).
       %% Planned porting to 3.0.0 patched, after waiting/more testing..
+
+      \item \code{arrayInd(*, useNames=TRUE)} and, analogously,
+      \code{which(*, arr.ind=TRUE)} now make use of
+      \code{names(.dimnames)} when available.
     }
   }
 
